--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -7,8 +7,8 @@ dependencies:
   - openmpi
   - openmpi-mpicc
   - openmpi-mpicxx
-  - petsc
-  - petsc4py
+  - petsc=3.21.5
+  - petsc4py=3.21.5
   - cython=3.*
   - mpmath<=1.3
   - mesalib
